--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,13 @@ tauri-build = { version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["shell-open"] }
+tokio = { version = "1.25.0", features = ["full"] }
+sqlx-cli = "0.6.2"
+
+[dependencies.sqlx]
+git = "https://github.com/launchbadge/sqlx"
+tag = "v0.6.0"
+features = [ "runtime-tokio-rustls" , "sqlite", "macros" ]
 
 [features]
 # by default Tauri runs in production mode
