--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,11 +18,13 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["shell-open"] }
 tokio = { version = "1.25.0", features = ["full"] }
 sqlx-cli = "0.6.2"
+axum = "0.2"
+chrono = { version = "0.4.24", features = ["serde"] }
 
 [dependencies.sqlx]
 git = "https://github.com/launchbadge/sqlx"
 tag = "v0.6.0"
-features = [ "runtime-tokio-rustls" , "sqlite", "macros" ]
+features = [ "runtime-tokio-rustls" , "sqlite", "macros", "chrono" ]
 
 [features]
 # by default Tauri runs in production mode
